--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
   
-    
+    <div id="layout"></div>
 
-    <script src="js/bundle.js"></script>
+    <script src="js/bundle.min.js"></script>
 </body>
 
 </html>
